objects/CMPL123QMS__CAPA__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <description>Action Plan</description>
        <label>Action Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Risk_Rating__c</fullName>
        <label>Actual Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Risk__c</fullName>
        <label>Business Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAPA_Closure_Date__c</fullName>
        <description>CAPA Closure Date</description>
        <label>CAPA Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAPA_Coord_Approval_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA Coord. Approval By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPAs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAPA_Coord_Approval_On__c</fullName>
        <label>CAPA Coord. Approval On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAPA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CAPA Owner</description>
        <label>CAPA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CAPAs (CAPA Owner)</relationshipLabel>
        <relationshipName>CAPAsOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAPA_Plan_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA Plan Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPAs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Actions_to_be_Completed__c</fullName>
        <label>Actions to be Completed</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assessment_of_Risk__c</fullName>
        <label>Assessment of Risk</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__CAPA_Source__c</fullName>
        <label>CAPA Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__CAPA_Title__c</fullName>
        <label>CAPA Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__CAPA_Type__c</fullName>
        <label>CAPA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrective Action</fullName>
                </value>
                <value>
                    <fullName>Preventive Action</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Document_Specification_Changes__c</fullName>
        <label>Document/Specification Changes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Documentation__c</fullName>
        <label>Documentation</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Effectiveness_of_Actions__c</fullName>
        <label>Effectiveness of Actions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Employee_Training__c</fullName>
        <label>Employee Training</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Evidence__c</fullName>
        <label>Evidence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Explanation_of_Problem__c</fullName>
        <label>Explanation of Problem</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Implementation_Completed_Date__c</fullName>
        <label>Implementation Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Implementation_Due_Date__c</fullName>
        <label>Implementation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Implementation_Summary__c</fullName>
        <label>Implementation Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Investigation_Completed_Date__c</fullName>
        <label>Investigation Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Investigation_Due_Date__c</fullName>
        <label>Investigation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Investigation_Past_Due__c</fullName>
        <description>This value checks on whether the Investigation phase of the CAPA is overdue</description>
        <formula>(CMPL123QMS__Investigation_Due_Date__c  &lt;  CMPL123QMS__Investigation_Completed_Date__c) ||   ((ISBLANK( CMPL123QMS__Investigation_Completed_Date__c )  &amp;&amp; (Today() &gt;  CMPL123QMS__Investigation_Due_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investigation Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Investigation_Procedure__c</fullName>
        <label>Investigation Procedure</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Investigation_Start_Date__c</fullName>
        <label>Investigation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__OOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OOS</label>
        <referenceTo>CMPL123QMS__OOS__c</referenceTo>
        <relationshipLabel>CAPAs</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Objective_of_Investigation__c</fullName>
        <label>Objective of Investigation</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Products_Affected__c</fullName>
        <label>Other Products Affected</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Potential_Impact__c</fullName>
        <label>Potential Impact</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product_Name__c</fullName>
        <formula>CMPL123QMS__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>CAPAs</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Remedial_Action_s__c</fullName>
        <label>Remedial Action(s)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Responsibilities_and_Resources__c</fullName>
        <label>Responsibilities and Resources</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Results_and_Data__c</fullName>
        <label>Results and Data</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_of_Problem__c</fullName>
        <label>Root Cause of Problem</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Verification_Completed_Date__c</fullName>
        <label>Verification Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Verification_Due_Date__c</fullName>
        <label>Verification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Verification_Method__c</fullName>
        <label>Verification Method</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Verification_Start_Date__c</fullName>
        <label>Verification Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Verification_of_Results__c</fullName>
        <label>Verification of Results</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123QMSCAPAcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Risk__c</fullName>
        <label>Compliance Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Initiated__c</fullName>
        <description>Date Initiated</description>
        <label>Date Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device_Problem__c</fullName>
        <label>Device Problem?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>CAPAs</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>Today()+30</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effectiveness_Check_Required__c</fullName>
        <label>Effectiveness Check Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effectivness_Check_Plan__c</fullName>
        <description>Effectivness Check Plan</description>
        <label>Effectiveness Check Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effectivness_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Effectivness Owner</description>
        <label>Effectiveness Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CAPAs (Effectivness Owner)</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effectivness_Summary__c</fullName>
        <description>Effectivness Summary</description>
        <label>Effectiveness Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Final Approver</description>
        <label>Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CAPAs (Final Approver)</relationshipLabel>
        <relationshipName>CAPAsFinalApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Risk__c</fullName>
        <label>Health Risk?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immediate_Actions__c</fullName>
        <label>Immediate Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_Analysis__c</fullName>
        <label>Impact Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Required__c</fullName>
        <description>Investigation Required?</description>
        <label>Investigation Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation_Summary__c</fullName>
        <label>Investigation Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_no_effectiveness_check__c</fullName>
        <label>Justification (No Effectiveness Check)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_detection__c</fullName>
        <label>Likelihood of detection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likelihood_of_occurrence__c</fullName>
        <description>Likelihood of occurrence</description>
        <label>Likelihood of occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operations_Approval_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Approval By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPAs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Approval_On__c</fullName>
        <label>Operations Approval On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability_Measure__c</fullName>
        <label>Probability Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Approval_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Approval By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPAs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Approval_On__c</fullName>
        <label>Quality Approval On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quality_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Event</label>
        <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
        <relationshipLabel>CAPAs</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regulatory_Approval_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Approval By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPAs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regulatory_Approval_On__c</fullName>
        <label>Regulatory Approval On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CAPAs</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <label>Risk Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause_Summary__c</fullName>
        <label>Root Cause Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity_Measure__c</fullName>
        <label>Severity Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_impact__c</fullName>
        <description>Severity of impact.</description>
        <label>Severity of impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Short Description</description>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CAPA</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__CAPA_Title__c</columns>
        <columns>CMPL123QMS__CAPA_Type__c</columns>
        <columns>CMPL123QMS__Explanation_of_Problem__c</columns>
        <columns>CMPL123QMS__Implementation_Start_Date__c</columns>
        <columns>CMPL123QMS__Investigation_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAPA-{00000}</displayFormat>
        <label>CAPA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effec_Check_is_None</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp; ( CMPL123_WF_Action__c =="Submit Final Review - Effectiveness Check Not Required"||CMPL123_WF_Action__c =="Verify Effectiveness - CAPA Action Plan") &amp;&amp; ISPICKVAL( Effectiveness_Check_Required__c,"")</errorConditionFormula>
        <errorMessage>Effectiveness check Required? must be answered before proceeding further.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effect_Check_Required_is_No</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp; CMPL123_WF_Action__c =="Verify Effectiveness - CAPA Action Plan" &amp;&amp; ISPICKVAL( Effectiveness_Check_Required__c,"No")</errorConditionFormula>
        <errorMessage>Cannot perform Verify Effectiveness - CAPA Action Plan action if Effectiveness Check Required? field is No</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_CAPA_when_QE_is_closed</fullName>
        <active>false</active>
        <errorConditionFormula>Quality_Event__r.CMPL123_WF_Status__c =="Closed - Quality Event"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fill_all_the_required_fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp; CMPL123_WF_Action__c =="Submit for Review - CAPA" &amp;&amp; Description__c ==""</errorConditionFormula>
        <errorMessage>Please fill all the required fields before proceeding.</errorMessage>
    </validationRules>
</CustomObject>